--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -19,7 +19,7 @@
     <item android:id="@+id/nav_login"
         android:title="@string/login" />
     <item android:id="@+id/nav_register"
-        android:title="@string/menuRegister" />
+        android:title="@string/register" />
     <item
         android:id="@+id/nav_logout"
         android:title="@string/logout"
