--- a/app/src/main/res/layout/activity_shopping_list_details.xml
+++ b/app/src/main/res/layout/activity_shopping_list_details.xml
@@ -13,11 +13,10 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/addProductButton"
-            style="@style/MiniFab"
+            style="@style/AlertDialog.AppCompat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="15dp"
             android:src="@drawable/fab_add_clear_selector"
             app:backgroundTint="@color/colorPrimaryDark"
             app:fabGravity="bottom_end" />
