--- a/app/src/main/res/menu/menu_add_list.xml
+++ b/app/src/main/res/menu/menu_add_list.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/addList"
-        android:icon="@drawable/ic_action_add_dark"
-        android:title="Nowa Lista" />
+        android:icon="@drawable/ic_action_add_24dp"
+        android:title="Nowa lista" />
     <item
         android:id="@+id/useTemplate"
         android:icon="@mipmap/ic_content_copy_black_24dp"
