--- a/app/src/main/res/layout/activity_shopping_lists.xml
+++ b/app/src/main/res/layout/activity_shopping_lists.xml
@@ -22,7 +22,7 @@
 
             <ListView
                 android:id="@+id/list"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             </LinearLayout>
