--- a/app/src/main/res/menu/menu_add_list.xml
+++ b/app/src/main/res/menu/menu_add_list.xml
@@ -7,6 +7,6 @@
         android:title="Nowa lista" />
     <item
         android:id="@+id/useTemplate"
-        android:icon="@mipmap/ic_content_copy_black_24dp"
-        android:title="Użyj szablonu"/>
+        android:icon="@drawable/ic_content_copy_24dp"
+        android:title="@string/useTemplate"/>
 </menu>
