--- a/app/src/main/res/layout/activity_shopping_list_details.xml
+++ b/app/src/main/res/layout/activity_shopping_list_details.xml
@@ -7,19 +7,9 @@
     android:layout_height="match_parent"
     tools:context="pl.pollub.shoppinglist.activity.ShoppingListsActivity">
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/addProductButton"
-            style="@style/AlertDialog.AppCompat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:src="@drawable/fab_add_clear_selector"
-            app:backgroundTint="@color/colorPrimaryDark"
-            app:fabGravity="bottom_end" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,11 +26,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-
         </LinearLayout>
-    </FrameLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/addProductButton"
+            style="@style/AlertDialog.AppCompat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:src="@drawable/fab_add_clear_selector"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:fabGravity="bottom_end" />
+    </android.support.design.widget.CoordinatorLayout>
 
     <include layout="@layout/menu_burger" />
-
 
 </android.support.v4.widget.DrawerLayout>
