--- a/app/src/main/res/layout/activity_templates.xml
+++ b/app/src/main/res/layout/activity_templates.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="pl.pollub.shoppinglist.activity.TemplatesActivity">
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
@@ -32,11 +32,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
             android:src="@drawable/fab_add_clear_selector"
             app:backgroundTint="@color/colorPrimaryDark"
             app:fabGravity="bottom_end" />
 
-    </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
     <include layout="@layout/menu_burger" />
 
