--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
     tools:context="pl.pollub.shoppinglist.activity.SettingsActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onAboutButtonClick"
+            android:text="Informacje o aplikacji" />
     </LinearLayout>
 
     <include layout="@layout/menu_burger" />
