Make title consistent

--- a/app/src/main/res/menu/menu_add_list.xml
+++ b/app/src/main/res/menu/menu_add_list.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/addList"
         android:icon="@drawable/ic_action_add_24dp"
-        android:title="Nowa lista" />
+        android:title="NowaLista" />
     <item
         android:id="@+id/useTemplate"
         android:icon="@drawable/ic_content_copy_24dp"
